# Matrix

./: .gitignore  CMakeLists.txt  dasd  readme.md
Matrix/include/: double_comparing.h  matrix.h  matrix_data.h  matrix_dumper.h  matrix_exceptions.h  matrix_iterator.h  matrix_wrap.h
Matrix/src/: matrix.cpp
tests/: CMakeLists.txt  tests.cpp
unit_tests/: CMakeLists.txt  tests.cpp
